security-strategy/restrict-communications-to-pod/wordpress/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress
  namespace: network-policy-ns
  labels:
    app: wordpress
spec:
  containers:
  - name: wordpress
    image: wordpress:6.4.1
    ports:
    - containerPort: 80
      name: wordpress
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
